# Changelog

Jumpcut predates the widespread adoption of semantic versioning; as such,
pre-1.0 releases are numbered as 0.XX.

## [0.81] - 2022-05-05
### Added
- An option is now exposed allowing a choice between the bezel following the
last used clipping as new clippings are added or moving to the top.
### Fixed
- The bezel's behavior when entering number keys (displaying the clipping at
that position, with "0" standing in for 10) is restored for keys other than
"1".
- The "remembering" stack size preference is now honored (although only
checked at startup).
- Jumpcut no longer crashes when "Clear All" is selected but there are no
clippings on the stack.
- We restore the Jumpcut bezel's ability to appear in any space when using
Spaces.
- A regression in the behavior of the stack positioning after deleting a
clipping (moving the position to the bottom of the stack) has been corrected.
- We've made additional tweaks to the Sauce key detection; this provides
keyboard-independent mapping for foreign and non-QWERTY keyboard layouts, but
was being applied inconsistently, leading to some issues with correct response
to keydown events when the bezel was displayed.
### Restored
- Per a user request, we've restored the option to run Jumpcut with in-memory
clippings *only*. Since this is a good way to lose your data and interacts
poorly with normal workflows, this is currently not exposed in the preferenes
window but needs to be set via the `defaults` command-line tool.
- Per a user request, we've restored the option to use the "white scissors"
emoji as the status bar icon.

## [0.80] - 2022-04-24
### Rewritten
- Jumpcut has been rewritten in Swift 5. As my day job is not writing code for
Macs (or Apple devices of any kind), my ability to work with Jumpcut's aging
code base was starting to dwindle; when I hit bugs, workarounds in Stack
Overflow often presumed use of Swift. This change will hopefully preserve