@@ -3,6 +3,11 @@
 Jumpcut predates the widespread adoption of semantic versioning; as such,
 pre-1.0 releases are numbered as 0.XX.
 
+## Unreleased
+### Fixed
+- A strange regression where the escape key dismissed the bezel only when the
+control key was not pressed has been resolved.
+
 ## [0.81] - 2022-05-05
 ### Added
 - An option is now exposed allowing a choice between the bezel following the
